--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -5,10 +5,10 @@ repo: upptime # The name of this repository
 sites:
   - name: Facebook
     url: https://www.facebook.com/
-  - name: Wikipedia
-    url: https://en.wikipedia.org
-  - name: Hacker News
-    url: https://news.ycombinator.com
+  - name: TED
+    url: https://www.ted.com/
+  - name: NCU
+    url: https://www.ncu.edu.tw/tw/index.html
   - name: Test Broken Site
     url: https://thissitedoesnotexist.koj.co
 
